# baked_fluent

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.circleci/: Dockerfile  build-docker.sh  config.yml
baked_fluent/: .gitignore  Cargo.toml
baked_fluent/benches/: bench.rs
baked_fluent/examples/: actix.rs  custom_from_request.rs
baked_fluent/src/: lib.rs  runtime.rs
baked_fluent/src/integrations/: actix.rs  maud.rs  mod.rs  rouille.rs
baked_fluent/test-i18n/en_US/: hello.ftl
baked_fluent/test-i18n/es_MX/: hello.ftl
baked_fluent/tests/: actix.rs  basic.rs
baked_fluent/tests/i18n/en_US/: hello.ftl
baked_fluent/tests/i18n/es_MX/: hello.ftl
baked_fluent/tests/ui/: 01-syntax-err.rs  01-syntax-err.stderr  02-missing-default.rs  02-missing-default.stderr  03-macro-err.rs  03-macro-err.stderr
baked_fluent/tests/ui/i18n-syntax-err/en_US/: hello.ftl
baked_fluent/tests/ui/i18n-syntax-err/zh_HK/: hello.ftl
baked_fluent_codegen/: Cargo.toml
baked_fluent_codegen/src/: error.rs  input.rs  lib.rs
