[package]
authors = ["James Gilles <jhgilles@mit.edu>"]
edition = "2018"
name = "baked_fluent"
version = "0.1.0"

[features]
full-nightly = []
full = []

[dependencies]
fluent-bundle = "0.6.0"
fluent-locale = "0.4.1"
lazy_static = "1.3.0"
baked_fluent_codegen = { path = "../baked_fluent_codegen"}
failure = "0.1.5"
failure_derive = "0.1.5"

[dev-dependencies]
criterion = "0.2.1"
trybuild = "1.0.3"

[[bench]]
name = "bench"
harness = false