[package]
authors = ["James Gilles <jhgilles@mit.edu>"]
edition = "2018"
name = "baked_fluent"
version = "0.1.0"

[features]
default = []
full-nightly = ["full", "with-maud"]
full = ["with-actix"]

with-actix = ["actix-web", "baked_fluent_codegen/with-actix"]
with-maud = ["maud"]

[dependencies]
fluent-bundle = "0.6.0"
fluent-locale = "0.4.1"
lazy_static = "1.3.0"
baked_fluent_codegen = { path = "../baked_fluent_codegen"}
actix-web = { version = "1.0.0-beta.3", optional = true }
maud = { version = "0.2.0", optional = true }

[dev-dependencies]
criterion = "0.2.1"
trybuild = "1.0.3"
pretty_env_logger = "0.3.0"

[[bench]]
name = "bench"
harness = false

[[example]]
name = "actix"
required-features = ["with-actix"]

[package.metadata.docs.rs]
features = ["full-nightly"]